# resumit-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  coolify.yaml  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py  main.py
app/api/: __init__.py  routes.py
app/models/: __init__.py  resume.py
app/services/: __init__.py  ats_scorer.py  cache.py  converter.py  nlp_utils.py  rendercv_service.py  resume_parser.py  text_extractor.py
