[project]
name = "rendercv-backend"
version = "1.0.0"
description = "RenderCV Backend API for Resume Generation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Resumit", email = "hello@resumit.app"}
]
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.17",
    "rendercv[full]>=2.1",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "pyyaml>=6.0.2",
    "aiofiles>=24.1.0",
    "Pillow>=11.0.0",
    "pdf2image>=1.17.0",
    "cairosvg>=2.7.1",
    "httpx>=0.28.0",
    "cachetools>=5.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

